--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-qr-code": "^2.0.15",
-    "tailwind-merge": "^2.5.3"
+    "react-toastify": "^10.0.5",
+    "tailwind-merge": "^2.5.3",
+    "toastify": "^2.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
